Refactored deprecated API calls